2001-12-05  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp: Reformat comments to 80 columns. Improve error
	messages for uninitialized finals.
	* src/definite.cpp: Improve error messages for assignment to blank
	vs. regular final variables.
	* src/error.cpp:
	* src/error.h (PARENT_TYPE_IN_UNNAMED_PACKAGE): Delete as unused.
	(TARGET_VARIABLE_IS_FINAL, FINAL_VARIABLE_TARGET_IN_LOOP): Rename
	to VARIABLE_NOT_DEFINITELY_UNASSIGNED,
	VARIABLE_NOT_DEFINITELY_UNASSIGNED_IN_LOOP.
	(FINAL_VARIABLE_NOT_BLANK, ABRUPT_INITIALIZER),
	(UNINITIALIZED_FINAL_VARIABLE_IN_INTERFACE): New errors.
	(METHOD_NOT_CLASS_METHOD, NAME_NOT_CLASS_VARIABLE): Improve
	wording, to make it clear that member exists - bug 2452.
	* src/semantic.h (AddDependence): Update to account that imports
	from unnamed package are no longer legal.
	* src/decl.cpp (ProcessInitializer): Update to account for fact
	that initializers are always reachable, and must complete normally
	- bug 2454, patch 234.

2001-11-30  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefiniteAssertStatement): Fix a bug in assert
	statement definite unassignment analysis.

2001-11-26  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (GetReadAccessMethod):
	* src/expr.cpp (FindMethodMember): Update to patch 142; qualified
	super methods require an accessor where fields did not, since the
	invokespecial bytecode can only occur in subclasses - bug 2430,
	patch 233.

2001-11-26  ??  <H.Zeller@acm.org>

	* jikes.spec: Mandrake compresses man-pages with bzip, not gzip -
	patch 232.

2001-11-25  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp: Reformat to fit more in 80 columns.
	(semantic, control): Rename from this_semantic and this_control.
	(StripNops): Rename from UnParenthesize, and include check for
	widening casts.
	(EmitCast): Update to treat (short)byte as a nop.
	(LoadReference): Remove, as it was duplicating EmitExpression.
	(EmitNewArray): Update to use ANEWARRAY instead of MULTIANEWARRAY